--- a/playbook_nginx.yml
+++ b/playbook_nginx.yml
@@ -4,10 +4,11 @@
       ansible.builtin.apt:
         name: nginx
         state: latest
+        update_cache: yes
       become: yes
 
     - name: update nginx config
-      ansible.builtin.copy:
+      ansible.builtin.template:
         src: files/nginx.conf
         dest: /etc/nginx/nginx.conf
       notify:
@@ -15,9 +16,9 @@
       become: yes
 
     - name: update index.html
-      ansible.builtin.copy:
+      ansible.builtin.template:
         src: files/index.html
-        dest: /usr/share/nginx/html/index.html
+        dest: "{{ root_dir }}/index.html"
       become: yes
       
 
