--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,7 @@
 [webservers]
 
-risky ansible_host=81.163.26.45
-hollow ansible_host=79.143.30.223
+pure ansible_host=81.163.27.169
+maroon ansible_host=80.249.149.75
 
+[webservers:vars]
+server_name={{ ansible_hostname }}
