--- a/playbook_absent_git.yml
+++ b/playbook_absent_git.yml
@@ -1,8 +1,19 @@
 - hosts: webservers
   gather_facts: no
+  vars: 
+    users:
+      - jaime
+      - sansa
+      - robert
   tasks:
   - name: remove git
     ansible.builtin.apt: 
       name: git
       state: absent
     become: yes
+
+  - name: Remove gitconfig
+    ansible.builtin.file:
+      path: "/home/{{ item }}/.gitconfig"
+      state: absent
+    loop: "{{ users }}"
