--- a/playbook_install_git.yml
+++ b/playbook_install_git.yml
@@ -1,5 +1,10 @@
 - hosts: webservers
   gather_facts: no
+  vars: 
+    users:
+      - jaime
+      - sansa
+      - robert
   tasks:
   - name: install git
     ansible.builtin.apt: 
@@ -8,9 +13,22 @@
       update_cache: yes
     become: yes
     tags: install
-
-  - name: update apt cache
-    ansible.builtin.apt: 
-      update_cache: yes
-    become: yes
-    tags: cache
+  
+  - name: create users
+    ansible.builtin.user:
+      name: "{{ item }}"
+      state: present
+    loop: "{{ users }}"
+  
+  - name: Set authorized key taken from file
+    ansible.posix.authorized_key:
+      user: "{{ item }}"
+      state: present
+      key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
+    loop: "{{ users }}"
+  
+  - name: create gitconfig
+    ansible.builtin.template:
+      src: files/.gitconfig
+      dest: "/home/{{ item }}/.gitconfig"
+    loop: "{{ users }}"
