--- a/playbook_install_git.yml
+++ b/playbook_install_git.yml
@@ -1,5 +1,4 @@
 - hosts: webservers
-  gather_facts: no
   vars: 
     users:
       - jaime
@@ -13,12 +12,14 @@
       update_cache: yes
     become: yes
     tags: install
+    when: ansible_os_family == "Debian"
   
   - name: create users
     ansible.builtin.user:
       name: "{{ item }}"
       state: present
     loop: "{{ users }}"
+    when: ansible_os_family == "Debian"
   
   - name: Set authorized key taken from file
     ansible.posix.authorized_key:
@@ -26,9 +27,11 @@
       state: present
       key: "{{ lookup('file', '~/.ssh/id_ed25519.pub') }}"
     loop: "{{ users }}"
+    when: ansible_os_family == "Debian"
   
   - name: create gitconfig
     ansible.builtin.template:
       src: files/.gitconfig
       dest: "/home/{{ item }}/.gitconfig"
     loop: "{{ users }}"
+    when: ansible_os_family == "Debian"
