--- a/inventory.ini
+++ b/inventory.ini
@@ -2,7 +2,7 @@
 
 pure ansible_host=81.163.27.169
 maroon ansible_host=80.249.149.75
-terrifying ansible_host=80.249.149.22
 
 [webservers:vars]
 server_name={{ ansible_hostname }}
+greeting=This is server {{ ansible_hostname }}
