--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,9 @@
 [webservers]
 
-pure ansible_host=81.163.27.169
-maroon ansible_host=80.249.149.75
+rick ansible_host=79.143.30.33
 
 [webservers:vars]
 server_name={{ ansible_hostname }}
 greeting=This is server {{ ansible_hostname }}
+
+
